--- a/poster/styles.css
+++ b/poster/styles.css
@@ -46,6 +46,13 @@ body {
 	padding-right: 15px;
 	text-align: right;
 }
+.footer {
+	text-align: right;
+	color: #00843f;
+	width: 93%;
+	margin-top: 150px;
+	display:block;
+}
 .circle {
 	z-index: -100;
 	position: absolute;
@@ -55,6 +62,12 @@ body {
 	left: -200px;
 	border-radius: 50%;
 	background-color: #4b4;
+}
+p {
+	font-size: 14px;
+	line-height: 20px;
+	color: #00843f;
+	mix-blend-mode: color-burn;
 }
 @media screen and (max-width: 1400px) {
 	.column {
@@ -78,13 +91,12 @@ body {
 		width: 320px;
 	}
 }
-p {
-	font-size: 14px;
-	line-height: 20px;
-	color: #00843f;
-	mix-blend-mode: color-burn;
-}
 @media screen and (max-width: 1200px) {
+	.footer {
+		margin-left: 30px;
+		margin-top: 60px;
+		width: 85%;
+	}
 	.circle {
 		transition: 2s;
 		left: -450px;
@@ -103,5 +115,8 @@ p {
 		width: 100%;
 		margin-top: 500px;
 		margin-right: 10px;
+	}
+	.footer {
+		width: 90%;
 	}
 }
