--- a/invitation/styles.css
+++ b/invitation/styles.css
@@ -10,6 +10,7 @@ body {
 	font-family: 'Raleway', sans-serif;
 }
 .circle-middle {
+	animation: breathemid 9s linear infinite;
 	position: absolute;
 	right: 320px;
 	top: 200px;
@@ -18,19 +19,22 @@ body {
 	height: 200px;
 	border-radius: 50%;
 	mix-blend-mode: color-burn;
+	
 }
-.ray-container {
-	position: absolute;
-	margin: auto;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	-webkit-animation: ray_anim 120s linear infinite;
- 	animation: ray_anim 120s linear infinite;
-	/*opacity: 0.3;*/
-	width:200px;
-	/*background-color: #000;*/
+@keyframes breathe {
+	0% {width: 700px; height: 700px}
+	50% {width: 750px; height: 750px;}
+	100% {width: 700px; height: 700px;}
+}
+@keyframes breathetop {
+	0% {width: 600px; height: 600px}
+	50% {width: 640px; height: 640px;}
+	100% {width: 600px; height: 600px;}
+}
+@keyframes breathemid {
+	0% {width: 200px; height: 200px}
+	50% {width: 230px; height: 230px;}
+	100% {width: 200px; height: 200px;}
 }
 .art {
 	font-size: 150px;
@@ -46,10 +50,11 @@ body {
 	color: #00843f;
 }	
 .circle-top {
+	animation: breathetop 9s linear infinite;
 	position: absolute;
 	width: 600px;
 	height: 600px;
-	border-radius: 300px;
+	border-radius: 50%;
 	background-color: #4b4;
 	top: -250px;
 	right: -150px;
@@ -57,10 +62,11 @@ body {
 
 .circle-bottom {
 	z-index: -100;
+	animation: breathe 9s linear infinite;
 	position: absolute;
 	width: 700px;
 	height: 700px;
-	border-radius: 350px;
+	border-radius: 50%;
 	background-color: #4b4;
 	bottom: -300px;
 	left: -100px;
