--- a/poster/styles.css
+++ b/poster/styles.css
@@ -69,6 +69,14 @@ p {
 	color: #00843f;
 	mix-blend-mode: color-burn;
 }
+a {
+	text-decoration: none;
+	color: #FFF;
+}
+a:hover {
+	font-size: 120px;
+	transition: .5s;
+}
 @media screen and (max-width: 1400px) {
 	.column {
 		display: block;
@@ -95,7 +103,7 @@ p {
 	.footer {
 		margin-left: 30px;
 		margin-top: 60px;
-		width: 85%;
+		width: 90%;
 	}
 	.circle {
 		transition: 2s;
@@ -108,6 +116,10 @@ p {
 	.offerings {
 		font-size: 65px;
 	}
+	a:hover {
+		font-size: 60px;
+		transition: .5s;
+	}
 }
 @media screen and (max-width: 900px) {
 	.info-container {
@@ -116,7 +128,10 @@ p {
 		margin-top: 500px;
 		margin-right: 10px;
 	}
-	.footer {
-		width: 90%;
-	}
+}
+::selection {
+	background: #0f0;
+}
+::-moz-selection; {
+	background: #0f0;
 }
